--- a/radAR/app/src/main/res/values/strings.xml
+++ b/radAR/app/src/main/res/values/strings.xml
@@ -48,5 +48,6 @@
     <string name="action_logout">Logout</string>
     <string name="action_mark_all_read">Mark All as Read</string>
     <string name="privacy_policy">Privacy Policy</string>
+    <string name="trackuser">Track this user</string>
 
 </resources>
