Connect with profile information layout

--- a/radAR2/app/src/main/res/values/strings.xml
+++ b/radAR2/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">radAR</string>
     <string name="sign_up_header">Sign Up</string>
+    <string name="trackuser">Track this user</string>
 </resources>
