--- a/radAR2/app/src/main/res/values/strings.xml
+++ b/radAR2/app/src/main/res/values/strings.xml
@@ -137,5 +137,7 @@
     <string name="melbourne_university_lng">144.9611738</string>
     <string name="unimelb">Melbourne University</string>
     <string name="title_activity_maps">Map</string>
+    <string name="title_activity_drawer_home">DrawerHomeActivity</string>
+    <string name="title_activity_home_screen">HomeScreenActivity</string>
 
 </resources>
