Updated HomeScreenActivity - refactor common nav drawer to new class

--- a/radAR2/app/src/main/res/values/strings.xml
+++ b/radAR2/app/src/main/res/values/strings.xml
@@ -139,5 +139,6 @@
     <string name="title_activity_maps">Map</string>
     <string name="title_activity_drawer_home">DrawerHomeActivity</string>
     <string name="title_activity_home_screen">HomeScreenActivity</string>
+    <string name="title_activity_chats_list">ChatsListActivity</string>
 
 </resources>
