Successfully working layout for PlaceActivity

--- a/radAR2/app/src/main/res/values/strings.xml
+++ b/radAR2/app/src/main/res/values/strings.xml
@@ -143,5 +143,7 @@
 
     <!-- Data related to MapsActivity -->
     <string name="title_activity_place">radAR Location Service</string>
+    <string name="location_permissions">Location Permissions</string>
+    <string name="need_location_permission_message">You need to enable location permissions first</string>
 
 </resources>
