--- a/radAR2/app/src/main/res/values/strings.xml
+++ b/radAR2/app/src/main/res/values/strings.xml
@@ -140,6 +140,8 @@
     <string name="title_activity_drawer_home">DrawerHomeActivity</string>
     <string name="title_activity_home_screen">HomeScreenActivity</string>
     <string name="title_activity_chats_list">ChatsListActivity</string>
+    <string name="app_label">Radar</string>
+    <string name="search_hint">Search for user..</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
