--- a/radAR2/app/src/main/res/values/strings.xml
+++ b/radAR2/app/src/main/res/values/strings.xml
@@ -146,5 +146,6 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_groups">GroupsActivity</string>
+    <string name="default_description">Hello, I am using Radar!</string>
 
 </resources>
