Change search location again

--- a/radAR2/app/src/main/res/values/strings.xml
+++ b/radAR2/app/src/main/res/values/strings.xml
@@ -141,9 +141,23 @@
     <string name="title_activity_home_screen">HomeScreenActivity</string>
     <string name="title_activity_chats_list">ChatsListActivity</string>
 
-    <!-- Data related to MapsActivity -->
+    <!-- Data related to LocationActivity -->
     <string name="title_activity_place">radAR Location Service</string>
     <string name="location_permissions">Location Permissions</string>
     <string name="need_location_permission_message">You need to enable location permissions first</string>
+
+    <string name="place_details">
+    <![CDATA[
+        <b>%1$s</b>
+        <br/>
+        <i>Place Id: %2$s</i>
+        <br/>
+        Address: %3$s
+        <br/>
+        Phone: %4$s
+        <br/>
+        Website: %5$s
+    ]]>
+    </string>
 
 </resources>
