--- a/radAR2/app/src/main/res/values/strings.xml
+++ b/radAR2/app/src/main/res/values/strings.xml
@@ -136,7 +136,7 @@
     <string name="melbourne_university_lat">-37.7963689</string>
     <string name="melbourne_university_lng">144.9611738</string>
     <string name="unimelb">Melbourne University</string>
-    <string name="title_activity_maps">radAR Map</string>
+    <string name="title_activity_maps">Map</string>
     <string name="title_activity_drawer_home">DrawerHomeActivity</string>
     <string name="title_activity_home_screen">HomeScreenActivity</string>
     <string name="title_activity_chats_list">ChatsListActivity</string>
@@ -147,19 +147,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_groups">GroupsActivity</string>
     <string name="default_description">Hello, I am using Radar!</string>
-
-    <string name="place_details">
-    <![CDATA[
-        <b>%1$s</b>
-        <br/>
-        <i>Place Id: %2$s</i>
-        <br/>
-        Address: %3$s
-        <br/>
-        Phone: %4$s
-        <br/>
-        Website: %5$s
-    ]]>
-    </string>
 
 </resources>
