--- a/radAR2/app/src/main/res/values/strings.xml
+++ b/radAR2/app/src/main/res/values/strings.xml
@@ -164,4 +164,9 @@
 
     <string name="directionsApiKey">AIzaSyAx1-_v4CYijIxiBVvGq_WQnyc0GeO5GCA</string>
 
+    <!-- Data related to Home Screen Activity -->
+    <string name="new_group">New Group</string>
+    <string name="new_chat">New Chat</string>
+    <string name="new_friend">New Friend</string>
+
 </resources>
