--- a/radAR2/app/src/main/res/values/strings.xml
+++ b/radAR2/app/src/main/res/values/strings.xml
@@ -129,7 +129,7 @@
     <string name="pref_ringtone_silent">Silent</string>
 
     <string name="pref_title_vibrate">Vibrate</string>
-    <string name="title_activity_signup">SignupActivity</string>
+    <string name="title_activity_signup">SignUpActivity</string>
     <string name="title_activity_chat_list">ChatListActivity</string>
 
     <!-- Data related to MapsActivity -->
