--- a/radAR2/app/src/main/res/values/strings.xml
+++ b/radAR2/app/src/main/res/values/strings.xml
@@ -173,8 +173,11 @@
     <string name="chat">Chat</string>
     <string name="ar">AR</string>
     <string name="not_tracking">Currently not tracking (sharing and receiving location updates). Tap to start tracking.</string>
+    <string name="tracking">Currently tracking (sharing and receiving location updates). Tap to stop tracking.</string>
     <string name="start_tracking">Start tracking</string>
+    <string name="stop_tracking">Stop tracking</string>
     <string name="off_caps">OFF</string>
+    <string name="on_caps">ON</string>
     <string name="group_name">Group name</string>
     <string name="delete_group">Delete Group</string>
     <string name="edit">Edit</string>
