Fix EditProfileActivity to not look bad

--- a/radAR2/app/src/main/res/values/strings.xml
+++ b/radAR2/app/src/main/res/values/strings.xml
@@ -182,5 +182,6 @@
     <string name="delete_group">Delete Group</string>
     <string name="edit">Edit</string>
     <string name="done">Done</string>
+    <string name="remove">REMOVE</string>
 
 </resources>
