--- a/radAR2/app/src/main/res/values/strings.xml
+++ b/radAR2/app/src/main/res/values/strings.xml
@@ -188,5 +188,6 @@
     <string name="meetingpoint">MeetingPoint</string>
     <string name="select">SELECT</string>
     <string name="new_group1">New group</string>
+    <string name="meeting_place_location">Meeting place location</string>
 
 </resources>
